--- a/audioplayer/css/style.css
+++ b/audioplayer/css/style.css
@@ -31,6 +31,8 @@ body{
 
     display: flex;
 
+    z-index: 0;
+
     position: relative;
 }
 
@@ -145,16 +147,18 @@ body{
 }
 
 .progress-container{
-    background-color: #fff;
+
     width: 100%;
     height: 4px;
+    background-color: #fff;
+    margin: 4px;
     border-radius: 5px;
 
     cursor: pointer;
 }
 
 .progress-container .progress{
-    width: 50%;
+    width: 0%;
     height: 100%;
     background-color: tomato;
     border-radius: 5px;
